--- a/src/pages/PetDetailPage/PetDetailPage.scss
+++ b/src/pages/PetDetailPage/PetDetailPage.scss
@@ -1,5 +1,5 @@
-@import '../../styles/partials/global.scss';
-@import '../../styles/partials/mixin.scss';
+@import "../../styles/partials/global.scss";
+@import "../../styles/partials/mixin.scss";
 
 .detail-container {
   background-color: $secondary-color1;
