--- a/src/App.css
+++ b/src/App.css
@@ -72,7 +72,6 @@ video {
   border: 0;
 }
 
-/* HTML5 display-role reset for older browsers */
 article,
 aside,
 details,
@@ -193,5 +192,5 @@ p {
 .App {
   width: 100%;
   height: 100vh;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
 }/*# sourceMappingURL=App.css.map */
