--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -72,7 +72,6 @@ video {
   border: 0;
 }
 
-/* HTML5 display-role reset for older browsers */
 article,
 aside,
 details,
@@ -195,9 +194,8 @@ p {
   justify-content: center;
   align-items: center;
   color: #000000;
-  padding: 2.4rem 1.6rem 2.4rem 1.6rem;
+  padding: 2rem 1rem 2rem 1rem;
   bottom: 0;
-  position: absolute;
   width: -webkit-fill-available;
 }
 @media screen and (min-width: 768px) {
@@ -209,6 +207,11 @@ p {
   .footer {
     padding: 4.8rem 3.6rem 4.8rem 3.6rem;
   }
+}
+.footer__nav-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
 
 .logo {
