--- a/src/pages/PetDetailPage/PetDetailPage.css
+++ b/src/pages/PetDetailPage/PetDetailPage.css
@@ -72,7 +72,6 @@ video {
   border: 0;
 }
 
-/* HTML5 display-role reset for older browsers */
 article,
 aside,
 details,
@@ -191,7 +190,7 @@ p {
 }
 
 .detail-container {
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   padding: 3rem;
   max-width: 600px;
   margin: 0 auto;
@@ -199,7 +198,7 @@ p {
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
 }
 .detail-container h1 {
-  color: #9C6BFF;
+  color: #9c6bff;
   text-align: center;
 }
 .detail-container p {
