--- a/src/pages/PetListingPage/PetListingPage.scss
+++ b/src/pages/PetListingPage/PetListingPage.scss
@@ -1,35 +1,65 @@
-@import '../../styles/partials/global.scss';
-@import '../../styles/partials/mixin.scss';
-
+@import "../../styles/partials/global.scss";
+@import "../../styles/partials/mixin.scss";
 
 .listings-container {
   background-color: $secondary-color4;
   padding: 2rem;
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  grid-gap: 2rem;
+  display: $display;
+  flex-wrap: wrap;
+  gap: 2rem;
+  justify-content: center;
 
   .pet-card {
     background-color: $secondary-color1;
-    border-radius: $border-radius;
-    padding: 1rem;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 15px;
+    padding: 1.5rem;
+    margin-bottom: 1.5rem;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+    max-width: 300px;
+    width: 100%;
     text-align: center;
-    @include hover-glow;
+    overflow: hidden;
+
+    &:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
+    }
+
+    img {
+      width: 100%;
+      height: 60%;
+      object-fit: cover;
+      border-radius: 10px;
+      margin-bottom: 1rem;
+      transition: transform 0.3s ease;
+      &:hover {
+        transform: scale(1.05);
+      }
+    }
 
     h2 {
-      color: $primary-color2;
+      color: $secondary-color2;
       margin-bottom: 0.5rem;
+      font-size: 1.8rem;
+      font-weight: bold;
     }
 
     p {
-      color: $secondary-color3;
+      color: $secondary-color2;
       margin-bottom: 1rem;
+      font-size: 1.4rem;
     }
 
     a {
-      color: $primary-color3;
+      color: $primary-color2;
       font-weight: bold;
+      font-size: 1.5rem;
+      text-decoration: none;
+      transition: color 0.3s;
+      &:hover {
+        color: $primary-color2;
+      }
     }
   }
-};
+}
